# forsys

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  run_tests.py
.github/workflows/: codspeed.yml  python-app.yml  python-benchmark.yml  python-publish.yml
docs/: api.rst  cite.rst  command_line.rst  conf.py  examples.rst  faq.rst  generalities.rst  gui.rst  index.rst  installation.rst  requirements.txt
docs/examples/: dynamic_in_silico.nblink  dynamic_in_vivo.nblink  static_in_silico.nblink  static_in_vivo.nblink
examples/: dynamic_in_silico.ipynb  dynamic_in_vivo.ipynb  static_in_silico.ipynb  static_in_vivo.ipynb
examples/data/in_silico/: step_0.dmp  step_1.dmp  step_10.dmp  step_11.dmp  step_12.dmp  step_13.dmp  step_14.dmp  step_15.dmp  step_16.dmp  step_17.dmp  step_18.dmp  step_19.dmp  step_2.dmp  step_20.dmp  step_21.dmp  step_22.dmp  step_23.dmp  step_24.dmp  step_3.dmp  step_4.dmp  step_5.dmp  step_6.dmp  step_7.dmp  step_8.dmp  step_9.dmp
examples/data/in_vivo/: t_0.tif  t_1.tif  t_2.tif  t_3.tif  t_4.tif
forsys/: __init__.py  __main__.py  auxiliar.py  borders.py  cell.py  cellfit.py  cmatrix.py  edge.py  edge_force.py  exceptions.py  fmatrix.py  forsys.py  frames.py  general_matrix.py  myosin.py  plot.py  pmatrix.py  pressure.py  skeleton.py  solve.py  stress_tensor.py  surface_evolver.py  tessellation.py  time_series.py  vertex.py  virtual_edges.py  wkt.py
tests/: benchmark.py  test_cells.py  test_dynamics.py  test_fit.py  test_frames.py  test_matrix.py  test_myosin.py  test_pressure.py  test_real_tissue.py  test_skeleton.py
tests/data/: initial_furrow.dmp  last_furrow.dmp  test_nonzero.tif
tests/data/12_12/: step_20.dmp  step_21.dmp  step_22.dmp  step_23.dmp  step_24.dmp
tests/data/experimental/: exp_1.csv  exp_1.tif
tests/data/furrow_gauss_velocity/: stage0.dmp  stage1.dmp  stage2.dmp  stage3.dmp  stage4.dmp  stage5.dmp  stage6.dmp  stage7.dmp
