[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forsys"
version = "1.1.2"
description = "A tissue stress and cell pressure inference package with dynamical information"
readme = "README.md"
authors = [{ name = "Augusto Borges", email = "borges.augustoar@gmail.com" }]
# license = { file = "LICENSE.md" }
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Physics"
]
keywords = ["systems biology", "stress", "pressure", "inference"]
dependencies = [
    "matplotlib >= 3.6.0",
    "numpy >= 1.23.0, <2.0",
    "opencv_python_headless >= 4.5.0.0",
    "pandas >= 1.4.2",
    "Pillow >= 9.3.0",
    "circle-fit >= 0.2.1",
    "scipy >= 1.10.0",
    "lmfit >= 1.2.2",
    "scikit-learn >= 1.3.2",
    "scikit-image<= 0.21.0", # for py3.8 support
    "tifffile >= 2023.7.10",
    "setuptools >= 60.2.0",
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
    "pytest >= 7.2.0",
    "pytest-codspeed>=2.2.1"
]

[project.urls]
Homepage = "https://github.com/borgesaugusto/forsys/"
